# NEZOO---NES-emulator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  debugerFrame.c  emuDebug  main.c  nz6502.c  nz6502.h  nzBUS.c  nzBUS.h  testcode.nezoo
includes/: sizebits.h
includes/NESoo_GUI/: CMakeLists.txt  NESoo_GUI.hpp
includes/UI/: CMakeLists.txt  UI_template.hpp  colors.h  disassember.hpp  memory_editor.h  registers_editor.hpp  utils.hpp
includes/nz6502/: CMakeLists.txt  nz6502.c  nz6502.h
includes/nzBUS/: CMakeLists.txt  nzBUS.c  nzBUS.h
src/: main.c  main.cpp
